--- a/src/styles/Uploader.css
+++ b/src/styles/Uploader.css
@@ -2,3 +2,10 @@
     height: 80vh;
     /* background-color: black; */
 }
+
+#custom-file-input {
+    width: 100%;
+    height: 100px;
+    border: 1px solid black;
+    background-color: aquamarine;
+}
