--- a/src/styles/Uploader.css
+++ b/src/styles/Uploader.css
@@ -4,8 +4,12 @@
 }
 
 #custom-file-input {
+    text-align: center;
+    display: flex;
+    justify-content: center;
     width: 100%;
     height: 100px;
     border: 1px solid black;
     background-color: aquamarine;
 }
+
